JumpScript/tests/baselines/reference/fixTypeParameterInSignatureWithRestParameters.errors.txt
tests/cases/compiler/fixTypeParameterInSignatureWithRestParameters.jump(2,8): error TS2345: Argument of type '""' is not assignable to parameter of type 'number'.


==== tests/cases/compiler/fixTypeParameterInSignatureWithRestParameters.jump (1 errors) ====
    function bar<T>(item1: T, item2: T) { }
    bar(1, ""); // Should be ok
           ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'number'.